2013-08-26  Andreas Kling  <akling@apple.com>

        Move DocumentTiming inside ENABLE(WEB_TIMING) guards.
        <https://webkit.org/b/120281>

        Reviewed by Anders Carlsson.

        Looks like this struct is only used by other ENABLE(WEB_TIMING) code, so don't bother
        filling it in if we're not building like that.

        * dom/Document.cpp:
        (WebCore::Document::setReadyState):
        (WebCore::Document::finishedParsing):
        * dom/Document.h:
        * dom/DocumentTiming.h:

2013-08-26  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK] Fix compile warning in WebKitDOMCustom
        https://bugs.webkit.org/show_bug.cgi?id=120286

        Reviewed by Philippe Normand.

        * bindings/gobject/WebKitDOMCustom.cpp:
        (webkit_dom_html_element_get_item_type): Add return 0.

2013-08-25  Ryosuke Niwa  <rniwa@webkit.org>

        JSHTMLFormElement::canGetItemsForName needlessly allocates a Vector
        https://bugs.webkit.org/show_bug.cgi?id=120277

        Reviewed by Sam Weinig.

        Added HTMLFormElement::hasNamedElement and used it in JSHTMLFormElement::canGetItemsForName.

        This required fixing a bug in HTMLFormElement::getNamedElements that the first call to getNamedElements
        after replacing an element A with another element B of the same name caused it to erroneously append A
        to namedItems via the aliases mapping. Because getNamedElements used to be always called in pairs, this
        wrong behavior was never visible to the Web. Fixed the bug by not adding the old element to namedItem
        when namedItem's size is 1.

        Also renamed m_elementAliases to m_pastNamesMap along with related member functions.

        No new tests are added since there should be no Web exposed behavioral change.

        * bindings/js/JSHTMLFormElementCustom.cpp:
        (WebCore::JSHTMLFormElement::canGetItemsForName):
        * html/HTMLFormElement.cpp: